# betty

./: .gitignore  .mailmap  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN.md  README.md  install.sh  justfile  pyproject.toml
.github/workflows/: claude-code-review.yml  cursor-code-review.yml  pages.yml  publish.yml  test.yml
docs/: CNAME  _config.yml  index.md
docs/_layouts/: default.html
docs/assets/css/: style.css
src/betty/: __init__.py  agent.py  agent_models.py  alerts.py  analyzer.py  berry.py  cache.py  cli.py  client.py  config.py  export.py  github.py  goals.py  metrics.py  mock_session.py  models.py  project_watcher.py  server.py  store.py  styles.py  summarizer.py  tmux_backend.py  transcript.py  tui.py  tui_textual.py  utils.py  watcher.py
src/claude_companion/: __init__.py  alerts.py  analyzer.py  cache.py  cli.py  config.py  export.py  history.py  hooks.py  mock_session.py  models.py  pricing.py  project_watcher.py  server.py  store.py  styles.py  summarizer.py  transcript.py  tui.py  tui_textual.py  utils.py  watcher.py
tests/: test_agent.py  test_analyzer.py  test_github.py  test_goals.py  test_metrics.py  test_models.py  test_parsing.py  test_server_client.py  test_summarizer_config.py  test_tmux_backend.py  test_tui_navigation.py
