[project]
name = "claude-companion"
version = "0.1.0"
description = "A CLI supervisor for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "filelock>=3.0",
    "requests>=2.28",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "textual>=0.50",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
claude-companion = "claude_companion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_companion"]

[tool.hatch.build.targets.sdist]
include = ["src/claude_companion"]
